--- a/index.html
+++ b/index.html
@@ -158,9 +158,39 @@
                 </a>
               </li>
               <li role="presentation">
+                <a class="gutter pad-t-1-4 pad-b-1-4 block" role="tab" aria-controls="footer" href="#footer">
+                  <div class="relative">
+                    <span>Footer</span>
+                    <i class="icon i-18 absolute pin-cr">
+                      <svg><use xlink:href="#icon-active" /></svg>
+                    </i>
+                  </div>
+                </a>
+              </li>
+              <li role="presentation">
                 <a class="gutter pad-t-1-4 pad-b-1-4 block" role="tab" aria-controls="forms" href="#forms">
                   <div class="relative">
                     <span>Forms</span>
+                    <i class="icon i-18 absolute pin-cr">
+                      <svg><use xlink:href="#icon-active" /></svg>
+                    </i>
+                  </div>
+                </a>
+              </li>
+              <li role="presentation">
+                <a class="gutter pad-t-1-4 pad-b-1-4 block" role="tab" aria-controls="header" href="#header">
+                  <div class="relative">
+                    <span>Header</span>
+                    <i class="icon i-18 absolute pin-cr">
+                      <svg><use xlink:href="#icon-active" /></svg>
+                    </i>
+                  </div>
+                </a>
+              </li>
+              <li role="presentation">
+                <a class="gutter pad-t-1-4 pad-b-1-4 block" role="tab" aria-controls="navigation" href="#navigation">
+                  <div class="relative">
+                    <span>Navigation</span>
                     <i class="icon i-18 absolute pin-cr">
                       <svg><use xlink:href="#icon-active" /></svg>
                     </i>
@@ -1059,6 +1089,40 @@
 
 </section>
 
+        <section class="pattern" id="footer" role="tabpanel" hidden aria-hidden="true" style="">
+  <div class="pattern-toolbar gutter pad-t-1-4 pad-b-1-8 relative" style="">
+    <h2 class="pattern-name exa push-1-4" style="color: #00d4c4; font-family: &quot;Playfair Display&quot;, serif;">Footer</h2>
+        <ul class="list-group-inline gutter absolute pin-cr">
+            <li>
+              <button class="center-contents-vertical pattern-tool-btn pattern-code-btn" title="Show code" aria-label="Show code" aria-pressed="false" aria-controls="footer--code-sample">
+                <i class="icon i-18">
+                  <svg><use xlink:href="#icon-code"></use></svg>
+                </i>
+              </button>
+            </li>
+            <li>
+              <button class="center-contents-vertical pattern-tool-btn pattern-include-btn" title="Copy include" aria-label="Copy include" data-copy-include-pattern="footer/" hidden>
+                <i class="icon i-18">
+                  <svg><use xlink:href="#icon-copy"></use></svg>
+                </i>
+              </button>
+            </li>
+            <li>
+              <a class="center-contents-vertical pattern-tool-btn pattern-pop-btn" href="" target="_blank" title="Open pattern in a new tab" aria-label="Open pattern in a new tab">
+                <i class="icon i-18">
+                  <svg><use xlink:href="#icon-pop-out"></use></svg>
+                </i>
+              </a>
+            </li>
+        </ul>
+  </div>
+
+
+  
+
+
+</section>
+
         <section class="pattern" id="forms" role="tabpanel" hidden aria-hidden="true" >
   <div class="pattern-toolbar gutter pad-t-1-4 pad-b-1-8 relative" >
     <h2 class="pattern-name exa push-1-4" style="color: #00d4c4; font-family: &quot;Playfair Display&quot;, serif;">Forms</h2>
@@ -1426,6 +1490,123 @@
 
 </section>
 
+        <section class="pattern" id="header" role="tabpanel" hidden aria-hidden="true" style="">
+  <div class="pattern-toolbar gutter pad-t-1-4 pad-b-1-8 relative" style="">
+    <h2 class="pattern-name exa push-1-4" style="color: #00d4c4; font-family: &quot;Playfair Display&quot;, serif;">Header</h2>
+        <ul class="list-group-inline gutter absolute pin-cr">
+            <li>
+              <button class="center-contents-vertical pattern-tool-btn pattern-code-btn" title="Show code" aria-label="Show code" aria-pressed="false" aria-controls="header--code-sample">
+                <i class="icon i-18">
+                  <svg><use xlink:href="#icon-code"></use></svg>
+                </i>
+              </button>
+            </li>
+            <li>
+              <button class="center-contents-vertical pattern-tool-btn pattern-include-btn" title="Copy include" aria-label="Copy include" data-copy-include-pattern="header/" hidden>
+                <i class="icon i-18">
+                  <svg><use xlink:href="#icon-copy"></use></svg>
+                </i>
+              </button>
+            </li>
+            <li>
+              <a class="center-contents-vertical pattern-tool-btn pattern-pop-btn" href="" target="_blank" title="Open pattern in a new tab" aria-label="Open pattern in a new tab">
+                <i class="icon i-18">
+                  <svg><use xlink:href="#icon-pop-out"></use></svg>
+                </i>
+              </a>
+            </li>
+        </ul>
+  </div>
+
+
+  
+
+
+</section>
+
+        <section class="pattern" id="navigation" role="tabpanel" hidden aria-hidden="true" style="">
+  <div class="pattern-toolbar gutter pad-t-1-4 pad-b-1-8 relative" style="">
+    <h2 class="pattern-name exa push-1-4" style="color: #00d4c4; font-family: &quot;Playfair Display&quot;, serif;">Navigation</h2>
+        <ul class="list-group-inline gutter absolute pin-cr">
+            <li>
+              <button class="center-contents-vertical pattern-tool-btn pattern-code-btn" title="Show code" aria-label="Show code" aria-pressed="false" aria-controls="navigation-navigation-code-sample">
+                <i class="icon i-18">
+                  <svg><use xlink:href="#icon-code"></use></svg>
+                </i>
+              </button>
+            </li>
+            <li>
+              <button class="center-contents-vertical pattern-tool-btn pattern-include-btn" title="Copy include" aria-label="Copy include" data-copy-include-pattern="navigation/navigation" hidden>
+                <i class="icon i-18">
+                  <svg><use xlink:href="#icon-copy"></use></svg>
+                </i>
+              </button>
+            </li>
+            <li>
+              <a class="center-contents-vertical pattern-tool-btn pattern-pop-btn" href="patterns/navigation/navigation.html" target="_blank" title="Open pattern in a new tab" aria-label="Open pattern in a new tab">
+                <i class="icon i-18">
+                  <svg><use xlink:href="#icon-pop-out"></use></svg>
+                </i>
+              </a>
+            </li>
+        </ul>
+  </div>
+
+      <div class="pattern-desc milli island" style="">
+        <div class="max-length"><p>The navigation is where all the website page links will be, Its on every page on top of the header image so consumers can navigate to other pages without going home.</p>
+</div>
+      </div>
+
+  
+
+    <div class="pattern-details " id="navigation--navigation" style="">
+
+      <div class="pattern-examples pad-t-1-2 pad-b-1-2" style="">
+        <div class="gutter-2 pad-t-1-2 pad-b-1-2">
+          <div class="resizeable-pattern relative" style="">
+            <i class="icon i-32 patternbot-iframe-loading-gears absolute pin-c"><svg><use xlink:href="#patternbot-iframe-loading-gears"></use></svg></i>
+            <iframe data-src="patterns/navigation/navigation.html" scrolling="no" onload="resizeIframe(this)"  ></iframe>
+              <div class="resizeable-pattern-length">
+                <div class="resize-handle resize-handle-left" style="">
+                  <i class="icon i-18">
+                    <svg><use xlink:href="#icon-resize-handle" /></svg>
+                  </i>
+                </div>
+                <div class="resize-handle resize-handle-right" style="">
+                  <i class="icon i-18">
+                    <svg><use xlink:href="#icon-resize-handle" /></svg>
+                  </i>
+                </div>
+              </div>
+          </div>
+        </div>
+
+          <div class="pattern-code-wrap gutter pad-t-1-2 pad-b-1-2" hidden aria-hidden="true" id="navigation-navigation-code-sample" tabindex="-1">
+            <div class="pattern-code relative milli island-1-2" style="">
+              <button class="center-contents-vertical pattern-tool-btn pattern-copy-btn absolute pin-tr" title="Copy code" aria-label="Copy code" data-clipboard-target="#navigation-navigation-code-sample-copy-chunk" hidden>
+                <i class="icon i-18">
+                  <svg><use xlink:href="#icon-copy"></use></svg>
+                </i>
+              </button>
+              <code><pre id="navigation-navigation-code-sample-copy-chunk">&lt;nav class="nav" role="navigation" id="nav" tabindex="0"&gt;
+  &lt;div class="wrapper gutter-1-2">
+    &lt;ol class="mega list-group-inline push-0">
+      &lt;li>&lt;a class="ib gutter-1-2 pad-t-1-2 pad-b-1-2 btn" href="index.html">Home&lt;/a>&lt;/li>
+      &lt;li>&lt;a class="ib gutter-1-2 pad-t-1-2 pad-b-1-2 btn" href="#aboutus">About Us&lt;/a>&lt;/li>
+      &lt;li>&lt;a class="ib gutter-1-2 pad-t-1-2 pad-b-1-2 selection btn" href="shop.html">Products&lt;/a>&lt;/li>
+      &lt;li>&lt;a class="ib gutter-1-2 pad-t-1-2 pad-b-1-2 btn" href="#contact">Contact&lt;/a>&lt;/li>
+      &lt;li>&lt;a class="ib gutter-1-2 pad-t-1-2 pad-b-1-2 btn" href="#products">Products&lt;/a>&lt;/li>
+    &lt;/ol>
+  &lt;/div>
+&lt;/nav>
+</pre></code>
+            </div>
+          </div>
+      </div>
+    </div>
+
+</section>
+
         <section class="pattern" id="sections" role="tabpanel" hidden aria-hidden="true" >
   <div class="pattern-toolbar gutter pad-t-1-4 pad-b-1-8 relative" >
     <h2 class="pattern-name exa push-1-4" style="color: #00d4c4; font-family: &quot;Playfair Display&quot;, serif;">Sections</h2>
@@ -1532,6 +1713,10 @@
                 </li>
             </ul>
         </div>
+          <div class="pattern-desc milli island" style="">
+            <div class="max-length"><p>The links-section is where all the social media links will go.</p>
+</div>
+          </div>
 
       <div class="pattern-examples pad-t-1-2 pad-b-1-2" style="">
         <div class="gutter-2 pad-t-1-2 pad-b-1-2">
@@ -1653,9 +1838,9 @@
   &lt;div class="unit xs-1 s-1 m-1 l-1-2 pad-t-1-2 pad-b-1-2">
     &lt;nav>
       &lt;ul class="list-group-inline push-0">
-        &lt;li class="pad-t-1-8 pad-b-1-8 gutter-1-4">&lt;a class="pad-t-1-8 pad-b-1-4 mega" href="#">Personal info&lt;/a>&lt;/li>
-        &lt;li class="pad-t-1-8 pad-b-1-8 gutter-1-4">&lt;a class="pad-t-1-8 pad-b-1-4 mega" href="#">Checkout info&lt;/a>&lt;/li>
-        &lt;li class="pad-t-1-8 pad-b-1-8 gutter-1-4">&lt;a class="pad-t-1-8 pad-b-1-4 mega" href="#">Payment info&lt;/a>&lt;/li>
+        &lt;li class="pad-t-1-8 pad-b-1-8 gutter-1-4">&lt;a class="link pad-t-1-8 pad-b-1-4 mega" href="#">Personal info&lt;/a>&lt;/li>
+        &lt;li class="pad-t-1-8 pad-b-1-8 gutter-1-4">&lt;a class="link pad-t-1-8 pad-b-1-4 mega" href="#">Checkout info&lt;/a>&lt;/li>
+        &lt;li class="pad-t-1-8 pad-b-1-8 gutter-1-4">&lt;a class="link pad-t-1-8 pad-b-1-4 mega" href="#">Payment info&lt;/a>&lt;/li>
       &lt;/ul>
     &lt;/nav>
   &lt;/div>
