--- a/patterns/sections/links-section.html
+++ b/patterns/sections/links-section.html
@@ -33,6 +33,10 @@
               <i><img class="img-s social-icon" src="../../images/icon-twitter.png" alt=""></i>
             </a>
           </li>
+          <a href="#">
+            <i><img class="img-s social-icon" src="../../images/icon-facebook.png" alt=""></i>
+          </a>
+        </li>
         </ul>
       </div>
     </footer>
