Add Buttons, Sections, Forms and Cards to Pattern library

--- a/patterns/banner/home-banner.html
+++ b/patterns/banner/home-banner.html
@@ -9,17 +9,16 @@
   <link href="../../common/type.css" rel="stylesheet">
   <link href="../../common/theme.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans|Rubik:400,700" rel="stylesheet">
-  <link href="cards.css" rel="stylesheet">
+  <link href="banner.css" rel="stylesheet">
 
 </head>
 <body>
   <div class="banner relative">
-    <div>
-      <img class="img-flex" src="../../images/rubik-mainbanner.jpg" alt="">
-    </div>
-    <div class="text-box-banner absolute pin-lc gutter-2">
-     <h1 class="pad-t-2">Home of the Rubik</h1>
-     <p class="max-length">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco</p>
+    <div class="home-text-image-banner gutter-2">
+      <div class="gutter wrapper home-text-box-banner absolute pin-tl">
+        <h1 class="pad-t-2">Home of the Rubik</h1>
+        <p class="island max-length">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+      </div>
     </div>
 
   </div>
