--- a/patterns/banner/product-list-banner.html
+++ b/patterns/banner/product-list-banner.html
@@ -9,17 +9,16 @@
   <link href="../../common/type.css" rel="stylesheet">
   <link href="../../common/theme.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans|Rubik:400,700" rel="stylesheet">
-  <link href="cards.css" rel="stylesheet">
+  <link href="banner.css" rel="stylesheet">
 
 </head>
 <body>
-  <div class="banner">
-    <div class="relative">
-      <img class="img-flex" src="../../images/rubik-banner-filter.jpg" alt="">
-    </div>
-    <div class="text-box-banner absolute pin-lc gutter-2">
-     <h1 class="pad-t-2">Filtering your Rubik</h1>
-     <p class="max-length">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco</p>
+  <div class="banner relative">
+    <div class="filter-text-image-banner">
+      <div class="filter-text-box-banner absolute pin-lc gutter-2 wrapper">
+       <h1 class="pad-t-2">Filtering your Rubik</h1>
+       <p class="island">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco</p>
+      </div>
     </div>
 
   </div>
