--- a/patterns/buttons/buttons.html
+++ b/patterns/buttons/buttons.html
@@ -17,6 +17,9 @@
   <a class="btn"><span aria-label="More">More<i></i></span></a>
   <a class="btn btn-save pad-t"><span aria-label="Save">Save<i></i></span></a>
   <a class="btn btn-cart push-r-2 pad-t"><span aria-label="Cart">Cart<i></i></span></a>
+  <a class="btn btn-drop pad-t"><span aria-label="Drop">drop<i></i></span></a>
+
+
 
 </body>
 </html>
