--- a/patterns/card/icon-card.html
+++ b/patterns/card/icon-card.html
@@ -10,6 +10,7 @@
   <link href="../../common/theme.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans|Rubik:400,700" rel="stylesheet">
   <link href="cards.css" rel="stylesheet">
+  <link href="../buttons/buttons.css" rel="stylesheet">
 </head>
 <body>
 
@@ -59,11 +60,10 @@
         <dt class="milli push-0">Accessibility:</dt>
         <dd class="milli push-0">Colour Blind Friendly.<br> Unavailable to the Blind.</dd>
       </dl>
-
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-      <div class=" push">
-        <a class="btn btn-cart" href="#"> Cart</a>
-        <a class="btn btn-cart" href="#"> Save</a>
+      <div class="push-2">
+        <a class="btn btn-small btn-save btn-small-flip pad-t"><span aria-label="Save">Save<i></i></span></a>
+        <a class="btn btn-small btn-cart btn-small-reverse push-r-2 pad-t"><span aria-label="Cart">Cart<i></i></span></a>
 
       </div>
     </div>
