--- a/patterns/forms/legend-label.html
+++ b/patterns/forms/legend-label.html
@@ -14,8 +14,13 @@
 </head>
 <body>
   <div class="">
-    <b class="inline-block number-devider text-center zetta">1</b>
-    <legend class="legend zetta bold">Billing information</legend>
+    <div class="error-message error-message-highlighted push island-1-2" role="alert" aria-live="assertive">
+      <h3 class="push-0">
+        <i class="icon i-32"><svg><use xlink:href="images/icons.svg#error" /></svg></i>
+        <span class="icon-label">There are items that require your attention</span>
+      </h3>
+    </div>
+    <legend class="legend zetta bold"><b class="inline-block number-devider text-center zetta push-r-1-2">1</b>Billing information</legend>
   </div>
 
 
