--- a/patterns/forms/password-input.html
+++ b/patterns/forms/password-input.html
@@ -14,10 +14,23 @@
 </head>
 <body>
 
-  <div class="unit [ xs-1-2 ] ">
-    <label for="password">Password</label>
-    <input type="password" name="password" id="password" required>
+  <div>
+    <form class="" action="index.html" method="post" novalidate>
+
+      <div class="unit [ xs-1-2 ]">
+        <label for="password">Password</label>
+        <input type="password" name="password" id="password" required aria-describedby="password-error">
+        <p class="error-message milli island-1-4 push-0 text-center" id="password-error">
+          <i class="icon i-16"><svg><use xlink:href="../../images/icons.svg#form-warning" /></svg></i>
+          <span class="icon-label">Your email address/password information are incorrect</span>
+        </p>
+      </div>
+    </form>
+
+
+    <script src="https://thomasjbradley.github.io/form-validation-helper/index.js"></script>
   </div>
+
 
 </body>
 </html>
