--- a/patterns/forms/text-area.html
+++ b/patterns/forms/text-area.html
@@ -15,7 +15,7 @@
 <body>
   <div class="unit [ xs-1-2 ] pad-t ">
     <label for="comments">Comments</label>
-    <textarea class="italic" name="comments" id="commments" rows="4" cols="80">Leave us a message!</textarea>
+    <textarea class="italic milli grey-text" name="comments" id="commments" rows="4" cols="80">Leave us a message!</textarea>
   </div>
 
 </body>
