--- a/patterns/icons/1-icons.html
+++ b/patterns/icons/1-icons.html
@@ -36,8 +36,8 @@
     </symbol>
   </svg>
 
-  <ul class="patternbot-icon-display patternbot-list-group list-group-inline">
-    <li>
+  <ul class="patternbot-icon-display patternbot-list-group list-group-inline ">
+    <li class="pad-b-1-2" style="">
       <div class="text-center">
         <div class="patternbot-icon-display-left island-1-2">
           <i class="icon i-128 block">
@@ -60,17 +60,23 @@
         <i class="icon i-24 patternbot-color-body">
           <svg><use xlink:href="../../images/icons.svg#cart-item" /></svg>
         </i>
-        <span class="icon-label ib"><code class="micro">#cart-item</code></span>
+        <span class="icon-label ib">
+          <code class="micro" style="">
+            #cart-item
+          </code>
+        </span>
         <span class="icon-label ib">
           <button class="center-contents-vertical patternbot-tool-btn pattern-copy-btn" title="Copy icon: cart-item" aria-label="Copy icon: cart-item" data-clipboard-text="&lt;i class=&quot;icon i-18&quot;&gt;&lt;svg&gt;&lt;use xlink:href=&quot;images/icons.svg#cart-item&quot;&gt;&lt;/use&gt;&lt;/svg&gt;&lt;/i&gt;" hidden>
             <i class="icon i-18 patternbot-color-body">
-              <svg><use xlink:href="#icon-copy"></use></svg>
+              <svg>
+                <use xlink:href="#icon-copy"  style=""></use>
+              </svg>
             </i>
           </button>
         </span>
       </div>
     </li>
-    <li>
+    <li class="pad-b-1-2" style="">
       <div class="text-center">
         <div class="patternbot-icon-display-left island-1-2">
           <i class="icon i-128 block">
@@ -93,17 +99,23 @@
         <i class="icon i-24 patternbot-color-body">
           <svg><use xlink:href="../../images/icons.svg#cart" /></svg>
         </i>
-        <span class="icon-label ib"><code class="micro">#cart</code></span>
+        <span class="icon-label ib">
+          <code class="micro" style="">
+            #cart
+          </code>
+        </span>
         <span class="icon-label ib">
           <button class="center-contents-vertical patternbot-tool-btn pattern-copy-btn" title="Copy icon: cart" aria-label="Copy icon: cart" data-clipboard-text="&lt;i class=&quot;icon i-18&quot;&gt;&lt;svg&gt;&lt;use xlink:href=&quot;images/icons.svg#cart&quot;&gt;&lt;/use&gt;&lt;/svg&gt;&lt;/i&gt;" hidden>
             <i class="icon i-18 patternbot-color-body">
-              <svg><use xlink:href="#icon-copy"></use></svg>
+              <svg>
+                <use xlink:href="#icon-copy"  style=""></use>
+              </svg>
             </i>
           </button>
         </span>
       </div>
     </li>
-    <li>
+    <li class="pad-b-1-2" style="">
       <div class="text-center">
         <div class="patternbot-icon-display-left island-1-2">
           <i class="icon i-128 block">
@@ -126,17 +138,23 @@
         <i class="icon i-24 patternbot-color-body">
           <svg><use xlink:href="../../images/icons.svg#form-completed" /></svg>
         </i>
-        <span class="icon-label ib"><code class="micro">#form-completed</code></span>
+        <span class="icon-label ib">
+          <code class="micro" style="">
+            #form-completed
+          </code>
+        </span>
         <span class="icon-label ib">
           <button class="center-contents-vertical patternbot-tool-btn pattern-copy-btn" title="Copy icon: form-completed" aria-label="Copy icon: form-completed" data-clipboard-text="&lt;i class=&quot;icon i-18&quot;&gt;&lt;svg&gt;&lt;use xlink:href=&quot;images/icons.svg#form-completed&quot;&gt;&lt;/use&gt;&lt;/svg&gt;&lt;/i&gt;" hidden>
             <i class="icon i-18 patternbot-color-body">
-              <svg><use xlink:href="#icon-copy"></use></svg>
+              <svg>
+                <use xlink:href="#icon-copy"  style=""></use>
+              </svg>
             </i>
           </button>
         </span>
       </div>
     </li>
-    <li>
+    <li class="pad-b-1-2" style="">
       <div class="text-center">
         <div class="patternbot-icon-display-left island-1-2">
           <i class="icon i-128 block">
@@ -159,17 +177,23 @@
         <i class="icon i-24 patternbot-color-body">
           <svg><use xlink:href="../../images/icons.svg#form-optional" /></svg>
         </i>
-        <span class="icon-label ib"><code class="micro">#form-optional</code></span>
+        <span class="icon-label ib">
+          <code class="micro" style="">
+            #form-optional
+          </code>
+        </span>
         <span class="icon-label ib">
           <button class="center-contents-vertical patternbot-tool-btn pattern-copy-btn" title="Copy icon: form-optional" aria-label="Copy icon: form-optional" data-clipboard-text="&lt;i class=&quot;icon i-18&quot;&gt;&lt;svg&gt;&lt;use xlink:href=&quot;images/icons.svg#form-optional&quot;&gt;&lt;/use&gt;&lt;/svg&gt;&lt;/i&gt;" hidden>
             <i class="icon i-18 patternbot-color-body">
-              <svg><use xlink:href="#icon-copy"></use></svg>
+              <svg>
+                <use xlink:href="#icon-copy"  style=""></use>
+              </svg>
             </i>
           </button>
         </span>
       </div>
     </li>
-    <li>
+    <li class="pad-b-1-2" style="">
       <div class="text-center">
         <div class="patternbot-icon-display-left island-1-2">
           <i class="icon i-128 block">
@@ -192,50 +216,101 @@
         <i class="icon i-24 patternbot-color-body">
           <svg><use xlink:href="../../images/icons.svg#form-warning" /></svg>
         </i>
-        <span class="icon-label ib"><code class="micro">#form-warning</code></span>
+        <span class="icon-label ib">
+          <code class="micro" style="">
+            #form-warning
+          </code>
+        </span>
         <span class="icon-label ib">
           <button class="center-contents-vertical patternbot-tool-btn pattern-copy-btn" title="Copy icon: form-warning" aria-label="Copy icon: form-warning" data-clipboard-text="&lt;i class=&quot;icon i-18&quot;&gt;&lt;svg&gt;&lt;use xlink:href=&quot;images/icons.svg#form-warning&quot;&gt;&lt;/use&gt;&lt;/svg&gt;&lt;/i&gt;" hidden>
             <i class="icon i-18 patternbot-color-body">
-              <svg><use xlink:href="#icon-copy"></use></svg>
+              <svg>
+                <use xlink:href="#icon-copy"  style=""></use>
+              </svg>
             </i>
           </button>
         </span>
       </div>
     </li>
-    <li>
+    <li class="pad-b-1-2" style="">
       <div class="text-center">
         <div class="patternbot-icon-display-left island-1-2">
           <i class="icon i-128 block">
-            <svg><use xlink:href="../../images/icons.svg#img-arrow" /></svg>
+            <svg><use xlink:href="../../images/icons.svg#img-arrow-l" /></svg>
           </i>
         </div>
         <div class="patternbot-icon-display-right center-contents island-1-2">
           <i class="icon i-64 block push-1-8">
-            <svg><use xlink:href="../../images/icons.svg#img-arrow" /></svg>
+            <svg><use xlink:href="../../images/icons.svg#img-arrow-l" /></svg>
           </i>
           <i class="icon i-32 block push-1-8">
-            <svg><use xlink:href="../../images/icons.svg#img-arrow" /></svg>
+            <svg><use xlink:href="../../images/icons.svg#img-arrow-l" /></svg>
           </i>
           <i class="icon i-18 block">
-            <svg><use xlink:href="../../images/icons.svg#img-arrow" /></svg>
+            <svg><use xlink:href="../../images/icons.svg#img-arrow-l" /></svg>
           </i>
         </div>
       </div>
       <div class="text-center patternbot-color-body">
         <i class="icon i-24 patternbot-color-body">
-          <svg><use xlink:href="../../images/icons.svg#img-arrow" /></svg>
+          <svg><use xlink:href="../../images/icons.svg#img-arrow-l" /></svg>
         </i>
-        <span class="icon-label ib"><code class="micro">#img-arrow</code></span>
         <span class="icon-label ib">
-          <button class="center-contents-vertical patternbot-tool-btn pattern-copy-btn" title="Copy icon: img-arrow" aria-label="Copy icon: img-arrow" data-clipboard-text="&lt;i class=&quot;icon i-18&quot;&gt;&lt;svg&gt;&lt;use xlink:href=&quot;images/icons.svg#img-arrow&quot;&gt;&lt;/use&gt;&lt;/svg&gt;&lt;/i&gt;" hidden>
+          <code class="micro" style="">
+            #img-arrow-l
+          </code>
+        </span>
+        <span class="icon-label ib">
+          <button class="center-contents-vertical patternbot-tool-btn pattern-copy-btn" title="Copy icon: img-arrow-l" aria-label="Copy icon: img-arrow-l" data-clipboard-text="&lt;i class=&quot;icon i-18&quot;&gt;&lt;svg&gt;&lt;use xlink:href=&quot;images/icons.svg#img-arrow-l&quot;&gt;&lt;/use&gt;&lt;/svg&gt;&lt;/i&gt;" hidden>
             <i class="icon i-18 patternbot-color-body">
-              <svg><use xlink:href="#icon-copy"></use></svg>
+              <svg>
+                <use xlink:href="#icon-copy"  style=""></use>
+              </svg>
             </i>
           </button>
         </span>
       </div>
     </li>
-    <li>
+    <li class="pad-b-1-2" style="">
+      <div class="text-center">
+        <div class="patternbot-icon-display-left island-1-2">
+          <i class="icon i-128 block">
+            <svg><use xlink:href="../../images/icons.svg#img-arrow-r" /></svg>
+          </i>
+        </div>
+        <div class="patternbot-icon-display-right center-contents island-1-2">
+          <i class="icon i-64 block push-1-8">
+            <svg><use xlink:href="../../images/icons.svg#img-arrow-r" /></svg>
+          </i>
+          <i class="icon i-32 block push-1-8">
+            <svg><use xlink:href="../../images/icons.svg#img-arrow-r" /></svg>
+          </i>
+          <i class="icon i-18 block">
+            <svg><use xlink:href="../../images/icons.svg#img-arrow-r" /></svg>
+          </i>
+        </div>
+      </div>
+      <div class="text-center patternbot-color-body">
+        <i class="icon i-24 patternbot-color-body">
+          <svg><use xlink:href="../../images/icons.svg#img-arrow-r" /></svg>
+        </i>
+        <span class="icon-label ib">
+          <code class="micro" style="">
+            #img-arrow-r
+          </code>
+        </span>
+        <span class="icon-label ib">
+          <button class="center-contents-vertical patternbot-tool-btn pattern-copy-btn" title="Copy icon: img-arrow-r" aria-label="Copy icon: img-arrow-r" data-clipboard-text="&lt;i class=&quot;icon i-18&quot;&gt;&lt;svg&gt;&lt;use xlink:href=&quot;images/icons.svg#img-arrow-r&quot;&gt;&lt;/use&gt;&lt;/svg&gt;&lt;/i&gt;" hidden>
+            <i class="icon i-18 patternbot-color-body">
+              <svg>
+                <use xlink:href="#icon-copy"  style=""></use>
+              </svg>
+            </i>
+          </button>
+        </span>
+      </div>
+    </li>
+    <li class="pad-b-1-2" style="">
       <div class="text-center">
         <div class="patternbot-icon-display-left island-1-2">
           <i class="icon i-128 block">
@@ -258,17 +333,23 @@
         <i class="icon i-24 patternbot-color-body">
           <svg><use xlink:href="../../images/icons.svg#qty-arrow" /></svg>
         </i>
-        <span class="icon-label ib"><code class="micro">#qty-arrow</code></span>
+        <span class="icon-label ib">
+          <code class="micro" style="">
+            #qty-arrow
+          </code>
+        </span>
         <span class="icon-label ib">
           <button class="center-contents-vertical patternbot-tool-btn pattern-copy-btn" title="Copy icon: qty-arrow" aria-label="Copy icon: qty-arrow" data-clipboard-text="&lt;i class=&quot;icon i-18&quot;&gt;&lt;svg&gt;&lt;use xlink:href=&quot;images/icons.svg#qty-arrow&quot;&gt;&lt;/use&gt;&lt;/svg&gt;&lt;/i&gt;" hidden>
             <i class="icon i-18 patternbot-color-body">
-              <svg><use xlink:href="#icon-copy"></use></svg>
+              <svg>
+                <use xlink:href="#icon-copy"  style=""></use>
+              </svg>
             </i>
           </button>
         </span>
       </div>
     </li>
-    <li>
+    <li class="pad-b-1-2" style="">
       <div class="text-center">
         <div class="patternbot-icon-display-left island-1-2">
           <i class="icon i-128 block">
@@ -291,17 +372,23 @@
         <i class="icon i-24 patternbot-color-body">
           <svg><use xlink:href="../../images/icons.svg#toggle-down" /></svg>
         </i>
-        <span class="icon-label ib"><code class="micro">#toggle-down</code></span>
+        <span class="icon-label ib">
+          <code class="micro" style="">
+            #toggle-down
+          </code>
+        </span>
         <span class="icon-label ib">
           <button class="center-contents-vertical patternbot-tool-btn pattern-copy-btn" title="Copy icon: toggle-down" aria-label="Copy icon: toggle-down" data-clipboard-text="&lt;i class=&quot;icon i-18&quot;&gt;&lt;svg&gt;&lt;use xlink:href=&quot;images/icons.svg#toggle-down&quot;&gt;&lt;/use&gt;&lt;/svg&gt;&lt;/i&gt;" hidden>
             <i class="icon i-18 patternbot-color-body">
-              <svg><use xlink:href="#icon-copy"></use></svg>
+              <svg>
+                <use xlink:href="#icon-copy"  style=""></use>
+              </svg>
             </i>
           </button>
         </span>
       </div>
     </li>
-    <li>
+    <li class="pad-b-1-2" style="">
       <div class="text-center">
         <div class="patternbot-icon-display-left island-1-2">
           <i class="icon i-128 block">
@@ -324,11 +411,17 @@
         <i class="icon i-24 patternbot-color-body">
           <svg><use xlink:href="../../images/icons.svg#toggle" /></svg>
         </i>
-        <span class="icon-label ib"><code class="micro">#toggle</code></span>
+        <span class="icon-label ib">
+          <code class="micro" style="">
+            #toggle
+          </code>
+        </span>
         <span class="icon-label ib">
           <button class="center-contents-vertical patternbot-tool-btn pattern-copy-btn" title="Copy icon: toggle" aria-label="Copy icon: toggle" data-clipboard-text="&lt;i class=&quot;icon i-18&quot;&gt;&lt;svg&gt;&lt;use xlink:href=&quot;images/icons.svg#toggle&quot;&gt;&lt;/use&gt;&lt;/svg&gt;&lt;/i&gt;" hidden>
             <i class="icon i-18 patternbot-color-body">
-              <svg><use xlink:href="#icon-copy"></use></svg>
+              <svg>
+                <use xlink:href="#icon-copy"  style=""></use>
+              </svg>
             </i>
           </button>
         </span>
