--- a/patterns/card/basic-card.html
+++ b/patterns/card/basic-card.html
@@ -10,6 +10,7 @@
   <link href="../../common/theme.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans|Rubik:400,700" rel="stylesheet">
   <link href="cards.css" rel="stylesheet">
+  <link href="../buttons/buttons.css" rel="stylesheet">
 
 </head>
 <body>
@@ -22,7 +23,8 @@
       <h3 class="pad-b-1-2 push-1-2">Item Name</h3>
       <p class="push-1-2">$$$$</p>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-      <a class="btn btn-drop" href="#">drop</a>
+      <a class="btn btn-save pad-t"><span aria-label="Save">Save<i></i></span></a>
+      <a class="btn btn-cart push-r-2 pad-t"><span aria-label="Cart">Cart<i></i></span></a>
     </div>
   </div>
 
