--- a/patterns/card/popular-sell.html
+++ b/patterns/card/popular-sell.html
@@ -10,6 +10,8 @@
   <link href="../../common/theme.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans|Rubik:400,700" rel="stylesheet">
   <link href="cards.css" rel="stylesheet">
+  <link href="../buttons/buttons.css" rel="stylesheet">
+
 
 </head>
 <body>
@@ -21,8 +23,8 @@
     <div class="unit [ xs-1 s-2-3 m-3-4 l-3-4] gutter">
       <h3 class="h3-separator pad-b-1-2">NEW Releases</h3>
       <p class="push-1-2">$$$$</p>
-      <a class="btn btn-more" href="#">more</a>
-      <a class="btn btn-cart" href="#">cart</a>
+      <a class="btn btn-small"><span aria-label="More">More<i></i></span></a>
+      <a class="btn btn-small btn-save btn-small-flip pad-t"><span aria-label="Save">Save<i></i></span></a>
     </div>
   </div>
 
