--- a/patterns/forms/date-field.html
+++ b/patterns/forms/date-field.html
@@ -14,10 +14,22 @@
 </head>
 <body>
 
-  <div class="unit [ xs-1-8 ] pad-t-1-2 gutter-1-4">
-    <label for="expiration push-1-2">Expiration Date</label>
-    <input type="date" name="expiration" id="expiration" required>
-  </div>
+  <form class="" action="index.html" method="post" novalidate>
+    <div class="unit [ xs-1-8 ] pad-t-1-2 gutter-1-4">
+      <label for="expiration push-1-2">Expiration Date</label>
+      <input type="date" name="expiration" id="expiration" required aria-describedby="date-error">
+      <p class="error-message milli island-1-4 push-0" id="date-error">
+        <i class="icon i-16"><svg><use xlink:href="images/icons.svg#error" /></svg></i>
+        <span class="icon-label">Please provide the date information as requested</span>
+      </p>
+    </div>
+  </form>
+
+
+
+
+  <script src="https://thomasjbradley.github.io/form-validation-helper/index.js"></script>
+
 
 </body>
 </html>
