--- a/patterns/forms/email-input.html
+++ b/patterns/forms/email-input.html
@@ -15,9 +15,23 @@
 <body>
 
   <div class="unit [ xs-1-2 ]">
-    <label for="email">Email Adress</label>
-    <input  type="email" name="email" id="email" required>
+
+    <form class="" action="index.html" method="post" novalidate>
+
+    <div class="push-1-2 unit [ xs-1-8 ] pad-t-1-2 gutter-1-4">
+      <label for="email">Email</label>
+      <input type="email" id="email" required aria-describedby="email-error">
+      <p class="error-message milli island-1-4 push-0 text-center" id="email-error">
+        <i class="icon i-16"><svg><use xlink:href="../../images/icons.svg#form-warning" /></svg></i>
+        <span class="icon-label">Please provide a properly formatted email address</span>
+      </p>
+    </div>
+  </form>
+
+
+    <script src="https://thomasjbradley.github.io/form-validation-helper/index.js"></script>
   </div>
+
 
 </body>
 </html>
