Add navigation to pattern library

--- a/patterns/icons/1-icons.html
+++ b/patterns/icons/1-icons.html
@@ -80,32 +80,32 @@
       <div class="text-center">
         <div class="patternbot-icon-display-left island-1-2">
           <i class="icon i-128 block">
-            <svg><use xlink:href="../../images/icons.svg#cart" /></svg>
+            <svg><use xlink:href="../../images/icons.svg#cart-empty" /></svg>
           </i>
         </div>
         <div class="patternbot-icon-display-right center-contents island-1-2">
           <i class="icon i-64 block push-1-8">
-            <svg><use xlink:href="../../images/icons.svg#cart" /></svg>
+            <svg><use xlink:href="../../images/icons.svg#cart-empty" /></svg>
           </i>
           <i class="icon i-32 block push-1-8">
-            <svg><use xlink:href="../../images/icons.svg#cart" /></svg>
+            <svg><use xlink:href="../../images/icons.svg#cart-empty" /></svg>
           </i>
           <i class="icon i-18 block">
-            <svg><use xlink:href="../../images/icons.svg#cart" /></svg>
+            <svg><use xlink:href="../../images/icons.svg#cart-empty" /></svg>
           </i>
         </div>
       </div>
       <div class="text-center patternbot-color-body">
         <i class="icon i-24 patternbot-color-body">
-          <svg><use xlink:href="../../images/icons.svg#cart" /></svg>
+          <svg><use xlink:href="../../images/icons.svg#cart-empty" /></svg>
         </i>
         <span class="icon-label ib">
           <code class="micro" style="">
-            #cart
+            #cart-empty
           </code>
         </span>
         <span class="icon-label ib">
-          <button class="center-contents-vertical patternbot-tool-btn pattern-copy-btn" title="Copy icon: cart" aria-label="Copy icon: cart" data-clipboard-text="&lt;i class=&quot;icon i-18&quot;&gt;&lt;svg&gt;&lt;use xlink:href=&quot;images/icons.svg#cart&quot;&gt;&lt;/use&gt;&lt;/svg&gt;&lt;/i&gt;" hidden>
+          <button class="center-contents-vertical patternbot-tool-btn pattern-copy-btn" title="Copy icon: cart-empty" aria-label="Copy icon: cart-empty" data-clipboard-text="&lt;i class=&quot;icon i-18&quot;&gt;&lt;svg&gt;&lt;use xlink:href=&quot;images/icons.svg#cart-empty&quot;&gt;&lt;/use&gt;&lt;/svg&gt;&lt;/i&gt;" hidden>
             <i class="icon i-18 patternbot-color-body">
               <svg>
                 <use xlink:href="#icon-copy"  style=""></use>
