--- a/patterns/navigation/page-navigation.html
+++ b/patterns/navigation/page-navigation.html
@@ -19,7 +19,7 @@
       <li>
         <a class="link-box buttons" href="#">
           <i class="icon i-32"><svg><use xlink:href="../../images/icons.svg#img-arrow-l"></use></svg></i>
-          <p class="inline bold">Previous page</p>
+          <p class="inline">Previous page</p>
         </a>
       </li>
 
@@ -55,7 +55,7 @@
 
       <li>
         <a class="link-box valign-top buttons" href="#">
-          <p class="inline bold">Next page</p>
+          <p class="inline">Next page</p>
           <i class="icon i-32 icon-flip"><svg><use xlink:href="../../images/icons.svg#img-arrow-r"></use></svg></i>
         </a>
       </li>
