--- a/index.html
+++ b/index.html
@@ -2060,7 +2060,10 @@
       <nav class="pattern-nav">
         <ol class="list-group-inline push-1-4 pad-b-1-4">
             <li><a href="#navigation--bread-crumbs">Bread crumbs</a></li>
+            <li><a href="#navigation--filter">Filter</a></li>
             <li><a href="#navigation--page-navigation">Page navigation</a></li>
+            <li><a href="#navigation--section">Section</a></li>
+            <li><a href="#navigation--tool-bars">Tool bars</a></li>
         </ol>
       </nav>
   </div>
@@ -2133,13 +2136,74 @@
               </button>
               <code><pre id="navigation-bread-crumbs-code-sample-copy-chunk">&lt;nav id="#nav"&gt;
   &lt;ul class="list-group-inline breadcrumb valign-bottom">
-    &lt;li>&lt;a class="link-box peta gutter-1-8" href="#">Home&lt;/a> &lt;b class="inline normal">&gt;&lt;/b>&lt;/li>
-    &lt;li>&lt;a class="link-box peta gutter-1-8" href="#">Product list &lt;b class="inline normal">&gt;&lt;/b>&lt;a>&lt;/a>&lt;/a>
+    &lt;li>&lt;a class="link-box peta gutter-1-8" href="#">Home&lt;b class="inline normal">&gt;&lt;/b>&lt;/a>&lt;/li>
+    &lt;li>&lt;a class="link-box peta gutter-1-8" href="#">Product list&lt;b class="inline normal">&gt;&lt;/b>&lt;a>&lt;/a>&lt;/a>
     &lt;/li>
     &lt;li>&lt;a class="link-box peta gutter-1-8" href="#">Rubik &lt;b class="inline normal">&gt;&lt;/b>&lt;/a>&lt;/li>
     &lt;li class="peta gutter-1-8">Item selected 01&lt;/li>
   &lt;/ul>
 &lt;/nav>
+</pre></code>
+            </div>
+          </div>
+      </div>
+    </div>
+    <div class="pattern-details " id="navigation--filter" style="">
+        <div class="pattern-toolbar pattern-toolbar-inner relative gutter pad-t-1-4 pad-b-1-4" style="">
+          <h3 class="pattern-name tera push-1-8">Filter</h3>
+            <ul class="list-group-inline gutter absolute pin-cr">
+                <li>
+                  <button class="center-contents-vertical pattern-tool-btn pattern-code-btn" title="Show code" aria-label="Show code" aria-pressed="false" aria-controls="navigation-filter-code-sample">
+                    <i class="icon i-18">
+                      <svg><use xlink:href="#icon-code"></use></svg>
+                    </i>
+                  </button>
+                </li>
+                <li>
+                  <button class="center-contents-vertical pattern-tool-btn pattern-include-btn" title="Copy include" aria-label="Copy include" data-copy-include-pattern="navigation/filter" hidden>
+                    <i class="icon i-18">
+                      <svg><use xlink:href="#icon-copy"></use></svg>
+                    </i>
+                  </button>
+                </li>
+                <li>
+                  <a class="btn center-contents-vertical pattern-tool-btn pattern-pop-btn" href="patterns/navigation/filter.html" target="_blank" title="Open pattern in a new tab" aria-label="Open pattern in a new tab">
+                    <i class="icon i-18">
+                      <svg><use xlink:href="#icon-pop-out"></use></svg>
+                    </i>
+                  </a>
+                </li>
+            </ul>
+        </div>
+
+      <div class="pattern-examples pad-t-1-2 pad-b-1-2" style="">
+        <div class="gutter-2 pad-t-1-2 pad-b-1-2">
+          <div class="resizeable-pattern relative" style="">
+            <i class="icon i-32 patternbot-iframe-loading-gears absolute pin-c"><svg><use xlink:href="#patternbot-iframe-loading-gears"></use></svg></i>
+            <iframe data-src="patterns/navigation/filter.html" scrolling="no" onload="resizeIframe(this)"  ></iframe>
+              <div class="resizeable-pattern-length">
+                <div class="resize-handle resize-handle-left" style="">
+                  <i class="icon i-18">
+                    <svg><use xlink:href="#icon-resize-handle" /></svg>
+                  </i>
+                </div>
+                <div class="resize-handle resize-handle-right" style="">
+                  <i class="icon i-18">
+                    <svg><use xlink:href="#icon-resize-handle" /></svg>
+                  </i>
+                </div>
+              </div>
+          </div>
+        </div>
+
+          <div class="pattern-code-wrap gutter pad-t-1-2 pad-b-1-2" hidden aria-hidden="true" id="navigation-filter-code-sample" tabindex="-1">
+            <div class="pattern-code relative milli island-1-2" style="">
+              <button class="center-contents-vertical pattern-tool-btn pattern-copy-btn absolute pin-tr" title="Copy code" aria-label="Copy code" data-clipboard-target="#navigation-filter-code-sample-copy-chunk" hidden>
+                <i class="icon i-18">
+                  <svg><use xlink:href="#icon-copy"></use></svg>
+                </i>
+              </button>
+              <code><pre id="navigation-filter-code-sample-copy-chunk">
 </pre></code>
             </div>
           </div>
@@ -2210,7 +2274,7 @@
     &lt;li>
       &lt;a class="link-box buttons" href="#">
           &lt;i class="icon i-32">&lt;svg>&lt;use xlink:href="../../images/icons.svg#img-arrow-l"/>&lt;/svg>&lt;/i>
-          &lt;p class="inline bold">Previous page&lt;/p>
+          &lt;p class="inline">Previous page&lt;/p>
         &lt;/a>
     &lt;/li>
 
@@ -2246,7 +2310,7 @@
 
     &lt;li>
       &lt;a class="link-box valign-top buttons" href="#">
-        &lt;p class="inline bold">Next page&lt;/p>
+        &lt;p class="inline">Next page&lt;/p>
         &lt;i class="icon i-32 icon-flip">&lt;svg>&lt;use xlink:href="../../images/icons.svg#img-arrow-r"/>&lt;/svg>&lt;/i>
       &lt;/a>
     &lt;/li>
@@ -2254,6 +2318,157 @@
   &lt;/ul>
 
 
+&lt;/div>
+</pre></code>
+            </div>
+          </div>
+      </div>
+    </div>
+    <div class="pattern-details " id="navigation--section" style="">
+        <div class="pattern-toolbar pattern-toolbar-inner relative gutter pad-t-1-4 pad-b-1-4" style="">
+          <h3 class="pattern-name tera push-1-8">Section</h3>
+            <ul class="list-group-inline gutter absolute pin-cr">
+                <li>
+                  <button class="center-contents-vertical pattern-tool-btn pattern-code-btn" title="Show code" aria-label="Show code" aria-pressed="false" aria-controls="navigation-section-code-sample">
+                    <i class="icon i-18">
+                      <svg><use xlink:href="#icon-code"></use></svg>
+                    </i>
+                  </button>
+                </li>
+                <li>
+                  <button class="center-contents-vertical pattern-tool-btn pattern-include-btn" title="Copy include" aria-label="Copy include" data-copy-include-pattern="navigation/section" hidden>
+                    <i class="icon i-18">
+                      <svg><use xlink:href="#icon-copy"></use></svg>
+                    </i>
+                  </button>
+                </li>
+                <li>
+                  <a class="btn center-contents-vertical pattern-tool-btn pattern-pop-btn" href="patterns/navigation/section.html" target="_blank" title="Open pattern in a new tab" aria-label="Open pattern in a new tab">
+                    <i class="icon i-18">
+                      <svg><use xlink:href="#icon-pop-out"></use></svg>
+                    </i>
+                  </a>
+                </li>
+            </ul>
+        </div>
+
+      <div class="pattern-examples pad-t-1-2 pad-b-1-2" style="">
+        <div class="gutter-2 pad-t-1-2 pad-b-1-2">
+          <div class="resizeable-pattern relative" style="">
+            <i class="icon i-32 patternbot-iframe-loading-gears absolute pin-c"><svg><use xlink:href="#patternbot-iframe-loading-gears"></use></svg></i>
+            <iframe data-src="patterns/navigation/section.html" scrolling="no" onload="resizeIframe(this)"  ></iframe>
+              <div class="resizeable-pattern-length">
+                <div class="resize-handle resize-handle-left" style="">
+                  <i class="icon i-18">
+                    <svg><use xlink:href="#icon-resize-handle" /></svg>
+                  </i>
+                </div>
+                <div class="resize-handle resize-handle-right" style="">
+                  <i class="icon i-18">
+                    <svg><use xlink:href="#icon-resize-handle" /></svg>
+                  </i>
+                </div>
+              </div>
+          </div>
+        </div>
+
+          <div class="pattern-code-wrap gutter pad-t-1-2 pad-b-1-2" hidden aria-hidden="true" id="navigation-section-code-sample" tabindex="-1">
+            <div class="pattern-code relative milli island-1-2" style="">
+              <button class="center-contents-vertical pattern-tool-btn pattern-copy-btn absolute pin-tr" title="Copy code" aria-label="Copy code" data-clipboard-target="#navigation-section-code-sample-copy-chunk" hidden>
+                <i class="icon i-18">
+                  <svg><use xlink:href="#icon-copy"></use></svg>
+                </i>
+              </button>
+              <code><pre id="navigation-section-code-sample-copy-chunk">&lt;div class="grid grid-middle sections gutter"&gt;
+  &lt;div class="unit [ xs-1 m-1-2 l-1-3 ]">
+    &lt;img class="img-flex" src="http://placehold.it/640x480" alt="">
+  &lt;/div>
+  &lt;div class="unit [ xs-1 m-1-2 l-2-3 ] island">
+    &lt;h2>That a Cube?&lt;/h2>
+    &lt;p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.&lt;/p>
+  &lt;/div>
+&lt;/div>
+</pre></code>
+            </div>
+          </div>
+      </div>
+    </div>
+    <div class="pattern-details " id="navigation--tool-bars" style="">
+        <div class="pattern-toolbar pattern-toolbar-inner relative gutter pad-t-1-4 pad-b-1-4" style="">
+          <h3 class="pattern-name tera push-1-8">Tool bars</h3>
+            <ul class="list-group-inline gutter absolute pin-cr">
+                <li>
+                  <button class="center-contents-vertical pattern-tool-btn pattern-code-btn" title="Show code" aria-label="Show code" aria-pressed="false" aria-controls="navigation-tool-bars-code-sample">
+                    <i class="icon i-18">
+                      <svg><use xlink:href="#icon-code"></use></svg>
+                    </i>
+                  </button>
+                </li>
+                <li>
+                  <button class="center-contents-vertical pattern-tool-btn pattern-include-btn" title="Copy include" aria-label="Copy include" data-copy-include-pattern="navigation/tool-bars" hidden>
+                    <i class="icon i-18">
+                      <svg><use xlink:href="#icon-copy"></use></svg>
+                    </i>
+                  </button>
+                </li>
+                <li>
+                  <a class="btn center-contents-vertical pattern-tool-btn pattern-pop-btn" href="patterns/navigation/tool-bars.html" target="_blank" title="Open pattern in a new tab" aria-label="Open pattern in a new tab">
+                    <i class="icon i-18">
+                      <svg><use xlink:href="#icon-pop-out"></use></svg>
+                    </i>
+                  </a>
+                </li>
+            </ul>
+        </div>
+
+      <div class="pattern-examples pad-t-1-2 pad-b-1-2" style="">
+        <div class="gutter-2 pad-t-1-2 pad-b-1-2">
+          <div class="resizeable-pattern relative" style="">
+            <i class="icon i-32 patternbot-iframe-loading-gears absolute pin-c"><svg><use xlink:href="#patternbot-iframe-loading-gears"></use></svg></i>
+            <iframe data-src="patterns/navigation/tool-bars.html" scrolling="no" onload="resizeIframe(this)"  ></iframe>
+              <div class="resizeable-pattern-length">
+                <div class="resize-handle resize-handle-left" style="">
+                  <i class="icon i-18">
+                    <svg><use xlink:href="#icon-resize-handle" /></svg>
+                  </i>
+                </div>
+                <div class="resize-handle resize-handle-right" style="">
+                  <i class="icon i-18">
+                    <svg><use xlink:href="#icon-resize-handle" /></svg>
+                  </i>
+                </div>
+              </div>
+          </div>
+        </div>
+
+          <div class="pattern-code-wrap gutter pad-t-1-2 pad-b-1-2" hidden aria-hidden="true" id="navigation-tool-bars-code-sample" tabindex="-1">
+            <div class="pattern-code relative milli island-1-2" style="">
+              <button class="center-contents-vertical pattern-tool-btn pattern-copy-btn absolute pin-tr" title="Copy code" aria-label="Copy code" data-clipboard-target="#navigation-tool-bars-code-sample-copy-chunk" hidden>
+                <i class="icon i-18">
+                  <svg><use xlink:href="#icon-copy"></use></svg>
+                </i>
+              </button>
+              <code><pre id="navigation-tool-bars-code-sample-copy-chunk">&lt;div class="shadow-box grid pad-t-1-8 pad-b-1-8 tool-bar"&gt;
+  &lt;div class="unit [xs-1 s-1-2 m-1-2 l-1-2] text-left push-1-2">
+    &lt;ul class="list-group-inline gutter push-none">
+      &lt;li>&lt;a class="sign-register link-box" href="">Sign-in&lt;/a>&lt;/li>
+      &lt;li class="gutter-1-4">or&lt;/li>
+      &lt;li>&lt;a class="sign-register link-box" href="">Register&lt;/a>&lt;/li>
+    &lt;/ul>
+
+  &lt;/div>
+  &lt;div class="unit [xs-1 s-1-2 m-1-2 l-1-2] text-right gutter-2">
+    &lt;ul class="list-group-inline push-none">
+      &lt;li>&lt;a class="link-box inline" href="#">EN - English&lt;/a>&lt;/li>
+      &lt;li>
+        &lt;a class="link-box cart-btn icon i-34 relative" href="#">
+            &lt;i class="icon i-32 absolute pin-tl cart-click">&lt;svg>&lt;use xlink:href="../../images/icons.svg#cart-empty"/>&lt;/svg>&lt;/i>
+            &lt;i class="icon i-32 absolute pin-tl cart-clicked">&lt;svg>&lt;use xlink:href="../../images/icons.svg#cart-item"/>&lt;/svg>&lt;/i>
+          &lt;/a>
+      &lt;/li>
+    &lt;/ul>
+
+  &lt;/div>
 &lt;/div>
 </pre></code>
             </div>
